WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135989
[Services with UI] Selections are incorrect when selecting three lines.
https://bugs.webkit.org/show_bug.cgi?id=135989
Summary
[Services with UI] Selections are incorrect when selecting three lines.
Enrica Casucci
Reported
2014-08-15 11:59:17 PDT
1. Go to
http://www.apple.com/contact
2. Select three lines of text 4. Try to hover it. Expected: Services overlay should show up, in the right place, triggered by hovering the text. Actual: Services overlay shows up when hovering the first and last line only.  <
rdar://problem/18032571
>
Attachments
Patch
(3.09 KB, patch)
2014-08-15 12:06 PDT
,
Enrica Casucci
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-08-15 12:06:54 PDT
Created
attachment 236665
[details]
Patch
Tim Horton
Comment 2
2014-08-15 12:16:03 PDT
Comment on
attachment 236665
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=236665&action=review
> Source/WebKit2/ChangeLog:10 > + over theree lines, if the middle line is composed of only one rectangle.
s/theree/three/, and no comma.
Enrica Casucci
Comment 3
2014-08-15 12:53:45 PDT
Committed revision 172643.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug