[Services with UI] Selections are incorrect when selecting three lines. https://bugs.webkit.org/show_bug.cgi?id=135989 <rdar://problem/18032571>

Reviewed by Tim Horton.

The stitching algorithm did not handle correctly the case of selections
over three lines if the middle line is composed of only one rectangle.

* WebProcess/WebPage/mac/ServicesOverlayController.mm:
(WebKit::stitchRects):



Canonical link: https://commits.webkit.org/153839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172643 268f45cc-cd09-0410-ab3c-d52691b4dbfc